# day6-rag

./: README.md  main.py  pyproject.toml
app/: documents.py  llm.py  main.py  retriever.py
