[project]
name = "day6-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "numpy>=2.4.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.49.0",
]
